--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./app.js"
+    "local": "sls offline"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/juliandkatz/centurylink-coding-challenge#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "serverless-http": "^1.9.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "serverless-offline": "^4.3.0"
+  }
 }
