basic versions of both routes now working

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "The purpose of this coding challenge is to test your ability to develop software for the CenturyLink Cloud organization. For this coding challenge, you’re free to use any coding language you’d like.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "local": "sls offline"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
